[gd_scene load_steps=6 format=3 uid="uid://cbqkagwoona7c"]

[ext_resource type="PackedScene" uid="uid://c7axrk5wwb6ab" path="res://scenes/GUI/containers/gui_popup_container.tscn" id="1_ox3lj"]
[ext_resource type="Script" uid="uid://dbqki8dm1ghmy" path="res://scenes/GUI/containers/gui_shop_container.gd" id="2_own80"]
[ext_resource type="PackedScene" uid="uid://bgeepmq2eiey4" path="res://scenes/GUI/controls/buttons/gui_rich_text_button.tscn" id="3_a248x"]
[ext_resource type="PackedScene" uid="uid://db451yo1xo5dy" path="res://scenes/GUI/tooltips/gui_item_tooltip.tscn" id="5_m4t4e"]

[sub_resource type="Resource" id="Resource_hhxsw"]
metadata/__load_path__ = "res://scenes/GUI/tooltips/gui_character_tooltip.tscn"

[node name="GUIShopContainer" instance=ExtResource("1_ox3lj")]
script = ExtResource("2_own80")

[node name="PanelContainer" parent="." index="0"]
unique_name_in_owner = true
offset_left = -150.0
offset_top = -115.0
offset_right = 150.0
offset_bottom = 115.0

[node name="NinePatchRect" parent="PanelContainer" index="0"]
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="MarginContainer" parent="PanelContainer" index="1"]
unique_name_in_owner = true
theme_override_constants/margin_top = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BlueprintContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ItemContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2

[node name="LeaveButton" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons" index="0" instance=ExtResource("3_a248x")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
localization_text_key = "LEAVE"

[node name="TitleBanner" parent="PanelContainer/FloatingViewContainer" index="0"]
offset_left = -63.0
offset_top = -9.0
offset_right = 63.0
offset_bottom = 15.0

[node name="Title" parent="PanelContainer/FloatingViewContainer/TitleBanner" index="0"]
unique_name_in_owner = true
text = "Shop"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/FloatingViewContainer" index="1"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 1
offset_left = 308.0
offset_top = 15.0
offset_right = 428.0
offset_bottom = 47.0

[node name="GUICharacterTooltip" parent="PanelContainer/FloatingViewContainer/PanelContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="GUIItemTooltip" parent="PanelContainer/FloatingViewContainer/PanelContainer" index="1" instance=ExtResource("5_m4t4e")]
unique_name_in_owner = true
layout_mode = 2
